cmake_minimum_required(VERSION 3.20)
project(linChat)

if (CMAKE_HOST_APPLE)
    message("the system is Macos")
    set(MACOS 1)
elseif (CMAKE_HOST_UNIX)
    message("the system is Linux")
    set(LINUX 1)
elseif(CMAKE_HOST_WIN32)
    message("the system is Win32")
    set(WIN32 1)
endif ()

if (LINUX OR MACOS)
    message("配置Linux相关路径")
    set(USR_LOCAL_H /usr/local/include)
    set(PY_BIND_H /usr/local/Cellar/pybind11/2.7.0/include)
    message("include pybind")
    include_directories(${PY_BIND_H})
    #set CMAKE_PREFIX_PATH by Linux_QT_ENV.sh
endif ()

if (MACOS)
    set(PYTHON_H /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/Python.framework/Headers)
    include_directories(${PYTHON_H})
endif()

aux_source_directory(. PYCOM_SRC)
message("prepare to generate pycom library")
add_library(pycom SHARED ${PYCOM_SRC})